ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  namespace: ingress-nginx
spec:
  rules:
  - host: www.hy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 9000
  - host: www.gx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-service
          servicePort: 8080
